# msk-io

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  WHITEPAPER.md  bootstrap_chromium.py  bootstrap_chromium.sh  bootstrap_pipeline.py  docker-compose.yml  full_setup.sh  image_analysis.py  pdf_ingest.py  processa_dicom.py  project.yaml  pyproject.toml  report_engine.py  requirements-lock.txt  run_tests.sh  sms_module.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
apps/: README.md
apps/browser-extension/: background.js  popup.html  popup.js
apps/flutter-app/lib/: main.dart
apps/pwa/: app.js  index.html  manifest.json
assets/resources/: convert_dataset_to_nnunet.py  evaluate.py
assets/resources/chromium/: README.md
charts/msk-io/: Chart.yaml
ci/: README.md
configs/: commitlint.config.cjs  git-commit-template.txt
core/: CLI.py  Runner.py  __init__.py
docs/: WHITEPAPER.md  system-map.md
docs/adr/: 0001-repo-normalization.md
extension/: background.js  manifest.json  popup.js
image/: ImageGenerator.py  OpenAIAPIWrapper.py  __init__.py
medical_image_analysis/: classification.py  config.py  main.py  preprocessing.py  requirements.txt
msk_io/: api.py  errors.py  io_pipeline.py
msk_io/eval/: __init__.py  evaluator.py
msk_io/image_processing/: __init__.py  dl_segmentor.py
msk_io/indexer/: __init__.py
msk_io/inference/prompts/: agent_prompts.py
msk_io/retrieval/: __init__.py  dicom_stream_sniffer.py
msk_io/schema/: _pydantic_base.py  base.py  llm_output.py  retrieval_info.py  synthesis.py  task_definitions.py
msk_io/utils/: decorators.py  log_config.py
pipelines/: README.md
prompt/: PromptHandler.py  WebSearch.py  __init__.py
pwa/: app.js  index.html
resources/chromium/: README.md
scripts/: bootstrap  bootstrap.ps1  build  build.ps1  check  check.ps1  clean  clean.ps1  coverage  coverage.ps1  dev  dev.ps1  e2e  e2e.ps1  ensure_spdx_headers.py  fmt  fmt.ps1  gen-docs  gen-docs.ps1  lint  lint.ps1  migrate  migrate.ps1  package  package.ps1  release  release.ps1  run-task  run-task.ps1  sbom  sbom.ps1  security-scan  security-scan.ps1  test  test.ps1  typecheck  typecheck.ps1  update-deps  update-deps.ps1
src/msk_io/: __init__.py  api.py  cli.py  config.py  errors.py  io_pipeline.py
src/msk_io/control/: multi_agent_harmonizer.py
src/msk_io/eval/: __init__.py  evaluator.py
src/msk_io/experimental/: __init__.py
src/msk_io/runtime/: tool.py  (+5 more)
tasks/: ProcessPDF.py  __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_control.py  test_semantic_indexer.py
tests/e2e/: README.md
tests/fixtures/: README.md
tests/integration/: README.md
tests/unit/: README.md  test_api.py  test_cli.py  test_config.py  test_control.py  test_dicom_sniffer.py  test_dl_segmentor.py  test_eval.py  test_semantic_indexer.py
totalsegmentatorv2/: cropping.py
(+60 files in other folders)
